# picovoice_ros

./: .gitmodules  CMakeLists.txt  README.md  package.xml
.github/workflows/: industrial_ci.yml  main.yaml  main.yml
picovoice_driver/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
picovoice_driver/cmake/: FindLIBSNDFILE.cmake  FindPORTAUDIO.cmake
picovoice_driver/resources/: contexts  keywords
picovoice_driver/resources/models/: porcupine_params.pv  porcupine_params_de.pv  porcupine_params_es.pv  porcupine_params_fr.pv  rhino_params.pv  rhino_params_de.pv  rhino_params_es.pv  rhino_params_fr.pv
picovoice_driver/src/: porcupine_node.cpp  porcupine_recognizer.cpp  porcupine_recognizer.h  recognizer.cpp  recognizer.h  recognizer_node.h  rhino_node.cpp  rhino_recognizer.cpp  rhino_recognizer.h  ros_util.cpp  ros_util.h  util.cpp  util.h
picovoice_driver/test/: test_porcupine.cpp  test_rhino.cpp
picovoice_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
picovoice_msgs/action/: GetIntent.action  GetKeyword.action  GetWakeWord.action
picovoice_msgs/msg/: Keyword.msg  KeywordUrl.msg
src/: paex_record.cpp  paex_record_rhino_demo.cpp  rhino_demo_mic.cpp
