<?xml version="1.0"?>
<package format="3">
  <name>picovoice_ros</name>
  <version>0.0.0</version>
  <description>ROS Wrappers for the Picovoice libraries</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
</package>
