<?xml version="1.0"?>
<package format="3">
  <name>picovoice_driver</name>
  <version>0.0.0</version>
  <description>ROS Wrappers for the Picovoice libraries</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>picovoice_msgs</depend>
  <depend>portaudio19-dev</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
</package>
