<?xml version="1.0"?>
<package format="3">
  <name>picovoice_driver</name>
  <version>1.0.1</version>
  <description>ROS Wrappers for the Picovoice libraries</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>libsndfile1-dev</depend>
  <depend>picovoice_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>yaml-cpp</depend>
</package>
