<?xml version="1.0"?>
<package format="3">
  <name>picovoice_msgs</name>
  <version>1.0.1</version>
  <description>ROS interfaces for interacting with Picovoice driver nodes</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>actionlib_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
